--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -84,14 +84,14 @@
                 brazos
                 abiertos para que formes parte de nuestra familia de voluntarios!
             </p>
-            <div class="row">
+            <div class="row formulario">
                 <div class="col-lg-6">
                     <p> Si estás interesado, no dudes en contactarnos, <strong>llena nuestro formulario</strong> y ser
                         parte de esta
                         maravillosa causa. ¡Los animales te necesitan!
                     </p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 formulario">
                     <form action="/submit" method="post" class="formulario-equipo">
                         <!--etiqueta contenedora, no tengo la url, por eso puse /submit-->
                         <span>
@@ -118,7 +118,9 @@
                             <label for="otro">Prefiero no decirlo</label>
                         </span>
                         <span>
-                            <input type="submit" value="Enviar">
+                            <button type="submit" value="Enviar">
+                                Enviar
+                                </button>
                         </span>
                     </form>
                 </div>
@@ -129,12 +131,10 @@
     <!--formulario -->
 
     <footer><!--Serian los pie de página con la información de contacto-->
-        <div>
 
             <a href="https://instagram.com">Encontranos en nuestro Instagram</a>
             <a href="https://facebook.com">Encontranos en Facebook</a>
             <a href="https://twitter.com">Encontranos en Twitter</a>
-        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
