--- a/pages/perdidos.html
+++ b/pages/perdidos.html
@@ -64,13 +64,23 @@
                 <button><img src="../fotos/logo-huellita.png" alt="logo huellita">¿Me encontraste?</button>
             </div>
         </div>
+        <div class="row">
+            <div class="tarjeta col-lg-5 shadow">
+                <img src="../fotos/Perdido Tomi.jpg" alt="Perro perdido">
+                <p>Me llamo Tomi, soy un chihuahua color marrón y blanco, tengo 2 años y me perdi en Villa Urquiza.</p>
+                <button><img src="../fotos/logo-huellita.png" alt="logo huellita">¿Me encontraste?</button>
+            </div>
+            <div class="tarjeta col-lg-5 shadow">
+                <img src="../fotos/Perdido Triana.jpg" alt="Perro Perdido">
+                <p>Me llamo Triana, soy una caniche de color marrón claro, tengo 4 años y me perdi en Saavedra</p>
+                <button><img src="../fotos/logo-huellita.png" alt="logo huellita">¿Me encontraste?</button>
+            </div>
+        </div>
     </main>
     <footer><!--Serian los pie de página con la información de contacto-->
-        <div>
             <a href="https://instagram.com">Encontranos en nuestro Instagram</a>
             <a href="https://facebook.com">Encontranos en Facebook</a>
             <a href="https://twitter.com">Encontranos en Twitter</a>
-        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
