--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <main class="container inicio">
         <section class="row align-items-center" id="presentacion">
             <div class="col-lg-6 imagen-presentacion">
-                <img src="Fotos/inicio.jpg" alt="imagen de inicio">
+                <img src="./fotos/inicio.jpg" alt="imagen de inicio">
             </div>
             <div class="col-lg-6 texto-presentacion">
                 <h2 class="titulo">¿Quiénes somos?</h2>
