cambios en perdidos mas animación

--- a/pages/perdidos.html
+++ b/pages/perdidos.html
@@ -66,13 +66,13 @@
         </div>
         <div class="row">
             <div class="tarjeta col-lg-5 shadow">
-                <img src="../fotos/Perdido Tomi.jpg" alt="Perro perdido">
-                <p>Me llamo Tomi, soy un chihuahua color marrón y blanco, tengo 2 años y me perdi en Villa Urquiza.</p>
+                <img src="../fotos/perdidos-juan.jpg" alt="Perro perdido">
+                <p>Me llamo Juan, soy un mestizo color marrón, tengo 6 años y me perdi en Villa Maipú.</p>
                 <button><img src="../fotos/logo-huellita.png" alt="logo huellita">¿Me encontraste?</button>
             </div>
             <div class="tarjeta col-lg-5 shadow">
-                <img src="../fotos/Perdido Triana.jpg" alt="Perro Perdido">
-                <p>Me llamo Triana, soy una caniche de color marrón claro, tengo 4 años y me perdi en Saavedra</p>
+                <img src="../fotos/perdidos-nacho.webp" alt="Perro Perdido">
+                <p>Me llamo Nacho, soy un perro mestizo, tengo 3 años y me perdi en banfield</p>
                 <button><img src="../fotos/logo-huellita.png" alt="logo huellita">¿Me encontraste?</button>
             </div>
         </div>
